Set Footer to position:fixed and adjusted rendered content to not be hidden under footer.

--- a/Group 2 My IMDB/Styles/CSS/edit_movie.css
+++ b/Group 2 My IMDB/Styles/CSS/edit_movie.css
@@ -51,6 +51,7 @@ p {
     background:linear-gradient(#ff4d4d,#ff0000);
     color: #fff;
     border-color:#ff4d4d;
+    margin-bottom: 100px;
 }
 #submit-changes-js {
     border-radius: 50em;
