--- a/Group 2 My IMDB/Styles/CSS/layouts.css
+++ b/Group 2 My IMDB/Styles/CSS/layouts.css
@@ -19,8 +19,8 @@ body::after{ content:''; display:block; height:100px; }
 
 footer{ 
     display: block;
-    position:absolute; 
-    bottom:0; 
+    position: fixed; 
+    bottom: 61px; 
     width:100%; 
     height:100px; 
   }
